HH-108307 Add Configuration Helper plugin for tms CKEditor

--- a/ckeditor-hh-tms/package.json
+++ b/ckeditor-hh-tms/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hh.ru/ckeditor-hh-tms",
-  "version": "2.1.0",
-  "description": "'ckeditor custom build for tms hh app'",
+  "version": "2.2.0",
+  "description": "CKEditor custom build for tms hh app",
   "main": "ckeditor/ckeditor.js",
   "author": "Nikita Mostovoy <nik.mostovoy@gmail.com> (https://hh.ru)"
 }
